# cgsref

./: .env.example  .gitignore  Context_for_agent.md  DEBUGGING_CHECKPOINT.md  Dockerfile  ERROR_RECOVERY_GUIDE.md  GITHUB_WORKFLOW_GUIDE.md  MIGRATION_GUIDE.md  NUOVO_WORKFLOW_CHECKLIST.md  PREMIUM_NEWSLETTER_IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  README.md  SYSTEM_STATUS_REPORT.md  WORKFLOW_IMPLEMENTATION_INDEX.md  check_backend_status.py  debug_content_generation.py  docker-compose.yml  frontend_integration_guide.md  package-lock.json  pyproject.toml  requirements-minimal.txt  requirements.txt  start_backend.py  start_backend_debug.py  supabase_schema.sql  supabase_setup_guide.md  test_ai_request.json  test_api.py  test_frontend_integration.py  test_frontend_live.py  test_knowledge_base.py  test_real_flow.py  test_request.json  test_simple.json  test_workflow_creation.py  validate_system.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
api/: __init__.py
api/cli/: main.py
api/rest/: exceptions.py  main.py  middleware.py
api/rest/v1/: dependencies.py
core/: __init__.py
core/application/: __init__.py
core/application/dto/: __init__.py  content_request.py  generation_result.py  workflow_config.py
core/application/interfaces/: __init__.py  llm_provider_interface.py  notification_interface.py  rag_interface.py
core/application/use_cases/: __init__.py  configure_agents.py  generate_content.py  manage_workflows.py
core/domain/: __init__.py
core/domain/entities/: __init__.py  agent.py  content.py  task.py  workflow.py
core/domain/repositories/: __init__.py  agent_repository.py  content_repository.py  workflow_repository.py
core/domain/value_objects/: __init__.py  client_profile.py  generation_params.py  provider_config.py
core/infrastructure/: __init__.py
core/infrastructure/config/: __init__.py  environment.py  providers.py  settings.py
core/infrastructure/external_services/: __init__.py  anthropic_adapter.py  deepseek_adapter.py  openai_adapter.py
core/infrastructure/logging/: agent_logger.py
core/infrastructure/orchestration/: agent_executor.py  task_orchestrator.py
core/infrastructure/repositories/: __init__.py  file_content_repository.py  file_workflow_repository.py  yaml_agent_repository.py
core/infrastructure/tools/: rag_tool.py  web_search_tool.py
core/infrastructure/utils/: template_utils.py
core/infrastructure/workflows/: __init__.py  registry.py
data/knowledge_base/siebert/: KnoweldgeBaseSiebert NL 3 (3).md  company_profile.md  content_guidelines.md
data/output/content/: 0263e582-0458-4c68-9ee2-f24ebaba40dd.md  055665a6-f66e-44b5-8ecc-89dc9de4d424.md  0a12add6-a693-47dd-ade0-e8d941710c8d.md  1922073b-5bd3-43d4-a10f-150098ea43bc.md  1c30099f-a39f-4a65-b19a-45219734cfba.md  2a8567f8-c16d-483a-b1e4-735e11092b5e.md  2e13bb10-234a-48fd-9f0c-f9af3be700e3.md  39bc4001-2e00-468c-9ecf-10da9dd08333.md  3a42e6e0-1da6-49b3-9701-4e16b8eb3ab1.md  3ca36ebe-557b-4e3d-8922-f5ecace726a1.md  3d246ad5-f1f8-45d5-a04e-db960b948bf2.md  490379af-8c6e-4aaa-acc1-401f78dae9f8.md  51fe5d30-1099-4059-863b-7516237a2f69.md  5dcd630d-2f6c-4a8f-bee5-177d6aaee278.md  6a0dd9ca-f507-40fb-bbe3-2636a98f50c7.md  766b0d39-ead8-41c6-b200-570bb8810f5d.md  861e4d97-5129-43de-97ff-2d4466c59686.md  88b3b028-0476-4b71-8b4b-e333ac90e430.md  92c52ffc-662d-4e8c-8cff-5aaa20adc7c1.md  99148dec-d1d9-4512-8fca-0dfff6650533.md  9e7ceb4b-30c0-4f63-8515-441bc092646f.md  bc00c4d6-9c51-4f29-b4b7-80847ea1aef3.md  c1b4460d-7c33-42d5-a6f5-115e25d0c9bf.md  c2ab80c9-9f78-41dd-adb0-a11f0aeb3157.md  d6feac69-84e8-40eb-b168-3cc5d8be30ad.md  (+4 more)
docs/architecture/: README.md
scripts/: setup.py
tests/: __init__.py  conftest.py
tests/unit/: test_domain_entities.py
web/react-app/: package-lock.json  package.json  tsconfig.json
(+146 files in other folders)
